# shlice

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  REFACTOR.md  build.zig  build.zig.zon  ci.py  osc-repl.clj
.github/workflows/: rust.yml  zig.yml
.lsp/.cache/: db.transit.json
src/: app.rs  app.zig  broker.rs  broker.zig  cli.rs  cli.zig  fs_atomic.zig  integration_test.zig  ipc.rs  ipc.zig  lib.rs  locks.zig  main.rs  main.zig  output.rs  output.zig  process.rs  process.zig  protocol.rs  protocol.zig  registry.zig  shell_id.rs  shell_id.zig  state.rs  state_dir.zig
tests/: integration.rs
